[gd_scene load_steps=7 format=3 uid="uid://b6h6kjvw5m161"]

[ext_resource type="Script" path="res://UI/AwesomeButton.gd" id="1_855py"]

[sub_resource type="Gradient" id="Gradient_gi6ck"]
colors = PackedColorArray(0.336608, 0.336608, 0.336608, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_eb1qw"]
gradient = SubResource("Gradient_gi6ck")
fill_from = Vector2(0, 1)
fill_to = Vector2(0.940171, 0.688034)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ldx6w"]
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_at7nk"]
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bljvl"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="AwesomeButton" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_855py")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_eb1qw")

[node name="ButtonControl" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -159.0
offset_top = -40.0
offset_right = 159.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="ButtonControl"]
clip_children = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_ldx6w")
theme_override_styles/hover = SubResource("StyleBoxFlat_at7nk")

[node name="ColorRect" type="ColorRect" parent="ButtonControl/Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Colors" type="Control" parent="ButtonControl/Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Green" type="ColorRect" parent="ButtonControl/Button/Colors"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 80.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0.647059, 0.411765, 1)

[node name="Red" type="ColorRect" parent="ButtonControl/Button/Colors"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 80.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.8, 0.439216, 0.0509804, 1)

[node name="Blue" type="ColorRect" parent="ButtonControl/Button/Colors"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 80.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0.607843, 0.733333, 1)

[node name="Label" type="Label" parent="ButtonControl"]
self_modulate = Color(0.333333, 0.333333, 0.333333, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "welp"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="ButtonControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bljvl")

[connection signal="mouse_entered" from="ButtonControl/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="ButtonControl/Button" to="." method="_on_button_mouse_exited"]
